Primeiro commit do projeto Silos Backend

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_URI='mongodb+srv://hcodeceira:PS4G0h7NgvZaUuQB@users.cpb7m.mongodb.net/users?retryWrites=true&w=majority&appName=users'
-PORT=3000
+MONGO_URI="mongodb+srv://hcodeceira:PS4G0h7NgvZaUuQB@users.cpb7m.mongodb.net/users?retryWrites=true&w=majority&appName=users"
+silosPORT=3000
 JWT_SECRET=troque-este-segredo
 NODE_ENV=development
 
